--- a/references.bib
+++ b/references.bib
@@ -1,21 +1,54 @@
-@article{Eigen1971,
-  title={Selforganization of matter and the evolution of biological macromolecules},
-  author={Eigen, Manfred},
-  journal={Naturwissenschaften},
-  volume={58},
-  number={10},
-  pages={465--523},
-  year={1971},
+@article{Enghardt2004,
+  title={Charged hadron tumour therapy monitoring by means of PET},
+  author={Enghardt, Crespo, Fiedler, Hinz, Parodi, Pawelke, Ponisch},
+  journal={Nuclear Instruments & Methods in Physics Research A},
+  number={525},
+  pages={284--288},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{Wilson1946,
+  title={Radiological use of fast protons},
+  author={Wilson},
+  journal={Radiology},
+  number={47},
+  pages={487--491},
+  year={1946},
+  publisher={RSNA}
+}
+
+@article{Crespo2007,
+  title={Direct time-of-flight for quantitative, real-time in-beam PET: a concept and feasibility study},
+  author={Crespo, Shakirin, Fiedler, Enghardt, Wagner},
+  journal={Physics in Medicine and Biology},
+  number={52},
+  pages={6795--6811},
+  year={2007},
+  publisher={IOP}
+}
+
+@article{Amaldi2011,
+  title={Present challenges in hadrontherapy techniques},
+  author={Amaldi, Braccini},
+  journal={The European Physical Journal Plus},
+  number={126},
+  pages={70--85},
+  year={2011},
   publisher={Springer}
 }
 
-@article{Knuth1968,
-  title={Semantics of Context-free Languages},
-  author={Knuth, Donald E},
-  journal={Mathematical Systems Theory},
-  volume={2},
-  number={2},
-  pages={127--145},
-  year={1968},
+@book{Linz2011,
+  title={Ion Beam Therapy},
+  author={Linz},
+  year={2012},
   publisher={Springer}
+}
+
+@PhdThesis{Parodi2004,
+  title={On the feasibility of dose quantification with in-beam PET data in radiotherapy with C and proton beams},
+  author={Parodi},
+  school={Technischen Universitat Dresden},
+  month={November},
+  year={2004}
 }
