--- a/references.bib
+++ b/references.bib
@@ -38,6 +38,27 @@
   publisher={Springer}
 }
 
+@article{Fiedler2006,
+  title={The Feasibility of In-Beam PET for Therapeutic Beams of He},
+  author={Fiedler, Crespo, Parodi, Sellesk, Enghardt},
+  journal={IEEE Transactions in Nuclear Science},
+  number={4},
+  volume={53},
+  pages={2252-2260},
+  year={2006},
+  publisher={IEEE}
+}
+
+@article{Conti2011,
+  title={Focus on time-of-flight PET: the benefits of improved time resolution},
+  author={Conti},
+  journal={European Journal of Nuclear Medicine and Molecular Imaging},
+  number={38},
+  pages={1147-1157},
+  year={2011},
+  publisher={Springer}
+}
+
 @book{Linz2011,
   title={Ion Beam Therapy},
   author={Linz},
