last form apple

--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,7 +1,7 @@
 \abstract
 
 In the field of cancer treatment, particle therapy has recently raised the interest of the community due to the high relative biological effectiveness of charged particles.
-In particular they prove to be more effective for targeting radio resistant or inoperable tumour.
+In particular they prove to be more effective for targeting radio resistant or inoperable tumours.
 Nevertheless different sources of error can worsen the dose delivery profile, such as patient mis positioning, evolution of the tumour/morphology of the patient and imprecision in the treatment plannings, due to fragmentation of the incident beam and range uncertainties.
 As a consequence a three-dimensional non invasive imaging technique for ion beam therapy monitoring is required. The attention of the community is thus focused on positron emission tomography (PET).
 
@@ -21,9 +21,9 @@ Samples of different crystalline species such as CeF$_{3}$, LSO:Ce, LuAG:Ce, LuA
 Data taking has been performed in two different conditions: excitation at low energy (36 eV) and a PET-like setup (511 KeV).
 
 The first set of measuremnts has been performed at the VUV beamline at Celia, Bordeaux, with an excitation energy of 36 eV. 
-The data show results broadly separable in to two main groups: crystals in the LuAG group, with rise times $>100$ ps, and crystals belonging to the LSO group with rise times $<50$ ps. This is due to the different energy transfer mechanism.
+The data show results broadly separable in to two main groups: crystals in the LuAG group, with rise times $>$100 ps, and crystals belonging to the LSO group with rise times $<$50 ps. This is due to the different energy transfer mechanism.
 
-The samples were then measured with a positron source (Na$^{22}$) on a experimental bench composed by a MCP-PMT stop detector and a tagging crystal readout by an amplified SiPM.
+The samples were then measured with a positron source ($^{22}$Na) on a experimental bench composed by a MCP-PMT stop detector and a tagging crystal readout by an amplified SiPM.
 Rise time order of magnitude proved to be accessible, though mantaining large uncertainties due to the limited resolution and the long accumulation times.
 Nonetheless we showed that Cerenkov photons and deep volume excitations introduce a non negligible contribution to the measured rise time. In particular the samples, excited above the Cerenkov threshold and in the deep volume of the crystal due to the energy of the excitation, showed slower rise times, above 100 ps.
 Moreover the influence of Teflon diffusive wrapping have been investigated, showing that opening the extraction cone of the crystals leads to higher rise times due to coupling of multiple reflection modes.
