--- a/Bibliography/References.bib
+++ b/Bibliography/References.bib
@@ -133,8 +133,6 @@
   publisher={American Institute of Physics}
 }
 
-
-% capitolo 3
 @article{Karp2008,
   title={The benefit of time-of-flight in PET imaging: Experimental and clinical results},
   author={Karp, Surti et al.},
@@ -143,6 +141,48 @@
   pages={462-470},
   year={2008},
   publisher={Society of Nuclear Medicine and Molecular Imaging}
+  }
+  
+% capitolo 3
+
+@article{Naud1996,
+  title={The Role of Cerium Sites in the Scintillation Mechanism of LSO},
+  author={Naud et al.},
+  journal={IEEE Transactions on Nuclear Science},
+  volume={43},
+  number={3},
+  pages={1324--1328},
+  year={1996},
+  publisher={IEEE}
+  }
+  
+  @article{Weber1996,
+  title={Luminescence of BGO: Spectral and Decay Properties},
+  author={Weber et al.},
+  journal={Journal of Applied Physics},
+  volume={44},
+  pages={5495--5499},
+  year={1973},
+  publisher={AIP Publishing}
+  }
+  
+@article{Kris2013,
+  title={Single crystalline LuAG fibers for homogeneous dual-readout calorimeters},
+  author={Pauwels et al.},
+  journal={Journal of Instrumentation},
+  year={2013},
+  publisher={IOP-Sissa}
+  }
+  
+  @article{Drozdowski2008,
+  title={Scintillation Properties of Praseodymium Activated Lu$_{3}$Al$_{5}$O$_{12}$ Single Crystals},
+  author={Drozdowski et al.},
+  journal={IEEE Transactions on Nuclear Science},
+  volume={55},
+  number={4},
+  pages={2420--2425},
+  year={2008},
+  publisher={IEEE}
   }
   
 @article{Schardt2007,
@@ -218,9 +258,10 @@ positron emission tomography},
 
 @article{Vasiliev2013,
   title={Multiscale Approach to Estimation of Scintillation Characteristics},
-  author={Vasilév, Getkin},
+  author={Vasiliev, Getkin},
   journal={IEE Transaction on Nuclear Science},
   number={Accepted},
+  year={2014},
   publisher={IEEE}
 }
 
@@ -255,6 +296,9 @@ positron emission tomography},
 }
 
 % capitolo 5
+%@website{ROOT,
+%http://root.cern.ch/drupal/
+%}
 
 @article{Pizzi2012,
   title={Ray Tracing Simulations in Scintillators: a Comparison between SLitrani and Geant4},
@@ -380,6 +424,15 @@ positron emission tomography},
 
 
 % capitolo 7
+@article{streak,
+  title={Use of Streak Camera for Time-Resolved Photon Counting Fluorimetry},
+  author={Davis et al.},
+  journal={Measurement Science and Technology},
+  volume={3},  
+  number={1},
+  year={1992}
+}
+
 @article{Martin2001,
   title={Time-Resolved Studies of Scintillation Materials with VUV Harmonic Ultrashort Pulses Laser Source},
   author={Martin, Belsky et al.},
