--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -2,16 +2,16 @@
 
 In the field of cancer treatment, particle therapy has recently raised the interest of the community due to the high relative biological effectiveness of charged particles.
 In particular they prove to be more effective for targeting radio resistant or inoperable tumours.
-Nevertheless different sources of error can worsen the dose delivery profile, such as patient mis positioning, evolution of the tumour/morphology of the patient and imprecision in the treatment plannings, due to fragmentation of the incident beam and range uncertainties.
+Nevertheless different sources of error can worsen the dose delivery profile, such as patient mis positioning, evolution of the tumour/morphology of the patient and imprecision in the treatment plannings, due to the fragmentation of the incident beam and range uncertainties.
 As a consequence a three-dimensional non invasive imaging technique for ion beam therapy monitoring is required. The attention of the community is thus focused on positron emission tomography (PET).
 
 In particular developments in the field of particle detectors push for the use of time of flight information, that allows to improve the sensitivity by improving the signal to noise ratio (SNR). 
-In order to benefit from a significative reduction of the SNR, the target is less than 100 ps FWHM coincidence time resolution for the two detectors.
+In order to benefit from a significative reduction of the SNR, the target is less than 100 ps FWHM coincidence time resolution.
 The standard solution for future PET scanners is to make use of heavy scintillating crystals coupled to Silicon PhotoMultipliers. 
 
 This thesis is devoted to the full characterization of the parameters that influence time resolution in a scintillator/photodetector setup, with particular attention focused on the impact of time profiles of heavy scintillators on the performance.
 
-The first part of the presented work has the objective of describing the fundamental model that governs light production and collection in a PET-like setup.
+The first part of the presented work has the objective of describing the fundamental model that governs light production and collection in a crystal.
 To this purpose a model based on multi-exponential time profiles has been implemented on an existing framework, widening the scope of usage by evaluating the role of Cerenkov photons produced by low energy radiation.
 
 Moreover in order to properly characterized the operational parameters of a scintillator setup, a comparative analysis of ray tracing softwares has been conducted, namely two packages SLitrani and Geant4. The latter has been chosen to build the simulation framework that allowed to disentangle the various source of resolution degradation.
@@ -26,7 +26,7 @@ The data show results broadly separable in to two main groups: crystals in the L
 The samples were then measured with a positron source ($^{22}$Na) on a experimental bench composed by a MCP-PMT stop detector and a tagging crystal readout by an amplified SiPM.
 Rise time order of magnitude proved to be accessible, though mantaining large uncertainties due to the limited resolution and the long accumulation times.
 Nonetheless we showed that Cerenkov photons and deep volume excitations introduce a non negligible contribution to the measured rise time. In particular the samples, excited above the Cerenkov threshold and in the deep volume of the crystal due to the energy of the excitation, showed slower rise times, above 100 ps.
-Moreover the influence of Teflon diffusive wrapping have been investigated, showing that opening the extraction cone of the crystals leads to higher rise times due to coupling of multiple reflection modes.
+Moreover the influence of Teflon diffusive wrapping have been investigated, showing that opening the extraction cone of the crystals leads to slower rise times due to coupling of multiple reflection modes.
 
 %Nell'ambito oncologico terapeutico, la terapia adronica ha recentemente sollevato l'interesse della comunit\á in virt\ú dell'elevato effetto biologico (RBE) delle particelle cariche.
 %In particolare si sono rivelate particolarmente efficaci per la cura di tumori radioresistenti o inoperabili.
