--- a/Bibliography/References.bib
+++ b/Bibliography/References.bib
@@ -415,6 +415,14 @@ positron emission tomography},
   publisher={Springer}
 }
 
+@article{Kawamura1996,
+  title={Spectroscopic Measurements of Optical Elements for Submillimeter Receivers},
+  author={Kawamura, al.},
+  journal={Seventh International Symposium on Space Terahertz Technology 1996 Proceeding},
+  pages={349--356},
+  year={1996},
+}
+
 @book{Becker2005,
   title={Advanced Time-Correlated Single Photon Counting Techniques},
   author={Becker},
