--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,9 +1,9 @@
 \abstract
 
 In the field of cancer treatment, particle therapy has recently raised the interest of the community due to the high relative biological effectiveness of charged particles.
-In particular they prove to be more effective for targeting radio resistant or inoperable tumours.
+They prove to be more effective than conventional radio therapy for targeting radio resistant or inoperable tumours.
 Nevertheless different sources of error can worsen the dose delivery profile, such as patient mis positioning, evolution of the tumour/morphology of the patient and imprecision in the treatment plannings, due to the fragmentation of the incident beam and range uncertainties.
-As a consequence a three-dimensional non invasive imaging technique for ion beam therapy monitoring is required. The attention of the community is thus focused on positron emission tomography (PET).
+A a three-dimensional non invasive imaging technique for ion beam therapy monitoring is thus required. The attention of the community is focused on positron emission tomography (PET).
 
 In particular developments in the field of particle detectors push for the use of time of flight information, that allows to improve the sensitivity by improving the signal to noise ratio (SNR). 
 In order to benefit from a significative reduction of the SNR, the target is less than 100 ps FWHM coincidence time resolution.
@@ -14,19 +14,20 @@ This thesis is devoted to the full characterization of the parameters that influ
 The first part of the presented work has the objective of describing the fundamental model that governs light production and collection in a crystal.
 To this purpose a model based on multi-exponential time profiles has been implemented on an existing framework, widening the scope of usage by evaluating the role of Cerenkov photons produced by low energy radiation.
 
-Moreover in order to properly characterized the operational parameters of a scintillator setup, a comparative analysis of ray tracing softwares has been conducted, namely two packages SLitrani and Geant4. The latter has been chosen to build the simulation framework that allowed to disentangle the various source of resolution degradation.
+Moreover in order to properly characterize the operational parameters of a scintillator setup, a comparative analysis of ray tracing software has been conducted, namely the two packages SLitrani and Geant4. The latter has been chosen to build the simulation framework that allowed to disentangle the various sources of resolution degradation.
 
-Finally the work focused on the measurements and evaluation of rise time. Non zero rise time in scintillating systems is given by the different processes characterizing energy deposition inside a crystalline lattice, with utmost relevance of the latest stage of electron hole thermalization. The time scale of this phenomenon is $\sim$ 100 ps and until now has proven to be difficult to estimate due to the intrinsic limitations of detection setups.
-Samples of different crystalline species such as CeF$_{3}$, LSO:Ce, LuAG:Ce, LuAG:Pr with different doping concentration are the subject of a time resolved analysis. 
+Finally the work focused on the measurements and evaluation of rise time. Non zero rise time in scintillating systems is given by the different processes of energy deposition inside a crystalline lattice, with utmost relevance of the latest stage of electron hole thermalization. The time scale of this phenomenon is $\sim$ 100 ps and until now has proven to be difficult to estimate due to the intrinsic limitations of detection setups.
+Different crystal samples such as CeF$_{3}$, LSO:Ce, LuAG:Ce, LuAG:Pr with different doping concentration are the subject of a time resolved analysis. 
 Data taking has been performed in two different conditions: excitation at low energy (36 eV) and a PET-like setup (511 KeV).
 
-The first set of measuremnts has been performed at the VUV beamline at Celia, Bordeaux, with an excitation energy of 36 eV. 
-The data show results broadly separable in to two main groups: crystals in the LuAG group, with rise times $>$100 ps, and crystals belonging to the LSO group with rise times $<$50 ps. This is due to the different energy transfer mechanism.
+The first set of measurements has been performed at the VUV beamline at Celia, Bordeaux, with an excitation energy of 36 eV. 
+The data show results broadly separable in two main groups: crystals in the LuAG group, with rise times $>$100 ps, and crystals belonging to the LSO group with rise times $<$50 ps. This is due to the different energy transfer mechanism.
 
 The samples were then measured with a positron source ($^{22}$Na) on a experimental bench composed by a MCP-PMT stop detector and a tagging crystal readout by an amplified SiPM.
 Rise time order of magnitude proved to be accessible, though mantaining large uncertainties due to the limited resolution and the long accumulation times.
-Nonetheless we showed that Cerenkov photons and deep volume excitations introduce a non negligible contribution to the measured rise time. In particular the samples, excited above the Cerenkov threshold and in the deep volume of the crystal due to the energy of the excitation, showed slower rise times, above 100 ps.
-Moreover the influence of Teflon diffusive wrapping have been investigated, showing that opening the extraction cone of the crystals leads to slower rise times due to coupling of multiple reflection modes.
+Nonetheless we showed that Cerenkov photons and deep volume excitations introduce a non negligible contribution to the measured rise time. In particular the samples, excited above the Cerenkov threshold and in the deep volume of the crystal due to the energy of the excitation, showed longer rise times, above 80 ps.
+The influence of Teflon diffusive wrapping has been investigated, showing that opening the extraction cone of the crystals leads to slower rise times due to coupling of multiple reflection modes.
+
 
 %Nell'ambito oncologico terapeutico, la terapia adronica ha recentemente sollevato l'interesse della comunit\á in virt\ú dell'elevato effetto biologico (RBE) delle particelle cariche.
 %In particolare si sono rivelate particolarmente efficaci per la cura di tumori radioresistenti o inoperabili.
