--- a/Acknowledgements/acknowledgements.tex
+++ b/Acknowledgements/acknowledgements.tex
@@ -1,5 +1,36 @@
 \acknowledgements
 
-Thank anyone you like here.  It's good practice to thank every granting agency that's given you money
-since you've been ABD, any other school you visited during your research,
-and any professional society that's funded your travel.
+\begin{center}
+Nothing matter but the quality 
+
+of the affection -
+
+in the end - that has carved the trace in the mind 
+
+\textit{dove sta memoria}
+
+(Ezra Pound, \textit{The Pisan Cantos}, Canto LXXVI)
+\end{center}
+
+In every moment of my professional and emotional life the three years spent at CERN will always be a central memory. Every moment, every discussion, every corner will eventually smooth out, but intact will be the eyes and the faces of the people that have helped me. Everyone in his own way, everyone in his own place, everyone carved \textit{dove sta memoria}.
+
+I am grateful to the people that, at some point in my career have believed in me, and I can imagine how difficult it could have been at times. Many thanks to my supervisors, Marco Paganoni, Etiennette Auffray and Paul Lecoq. It has been a pleasure to discuss, argue, agree and disagree and to retain the freedom and respect in this group not only as a value, but as an example.
+
+Everyone at CERN, in that "lab within the lab" that is building 27 has helped me, at some point. Someone helped me out with electronics, someone with crystal theory, someone with a gentle word, or a simple smile. Many thanks then to Stefan, Kristof, Alessio, Benjamin. Thanks to my office mate Mythra, for the discussions on semantics and Indian food and Indian mythology. Thanks to Rosanita, Arno, Pawel, Dominique, Tom, Rita, Gianluca, Giulia, PierPaolo, Farah, Katayoun, Igor. 
+Many thanks to Patrick Martin at CELIA, for his helpfulness and old-time courtesy. 
+A hug to the guys at the CERN Rugby Club, just to remember that dirt, honour, fall and joy share the same dusty ground.
+
+I would not be writing these confuse paragraphs if it was not for the Entervision project. A shiny example of what Europe could and should be, of the beautiful strength that comes from diversity. Sincere thanks to the Entervision group, at CERN and around: Manjit, Helen, Carlo, Antonios, Joakim, Carlos, Robert, Marco and Marco, Thiago, Ben, Romain, Marie, Frauke, Yuan, Fernando, Manuela. Always remember the beautiful victory at the water and straws contest!
+
+Special thanks to the Ornex Gourmet Club: Pizzi, Amassiro, Cuccia, Raffa. Thanks for the cigarettes, the FIFA matches, the dinners, the laughs.
+And thanks to all the friends around that have showed me how important is to be loved. Thanks to Fil, Diana and Rebecca. Thanks to Alessio, Valerio, Tanietta, Gerry and Paola. Special thanks to my cousin Ilias and Krizia, for having me as a Southern man for a few days here and there.
+
+When you leave home, you always feel like an orphan, waiting for a \textit{Rachel} to pick you up. It seems like a shadow line, but it is more like a silent step in a back door garden. I tried to grasp, from a distance, what I could, and all my friends are still there. And I retain this as crafty art work and as an empirical demonstration that love is a daily exercise. Thanks to those Old friends, always ready for a word, for that rare passage of the expat: Morris, Guada and Giorgia, Pagnu, Zuenni, Passo, Marco and Fede, Falco and Lucy, Belci and Angela, Triz, Paul.
+
+And leaving home is also facing the Italian \'etude of stepping out and rediscover. My family is special. It is special for the secular feeling of freedom, for the innate strength that led who forerun me from the dusty roads of the South to the sweaty concrete of the North. A step outside home allows to fully understand the difference between a community bound by love and a society bound by law. Whatever I am, I owe to my family. Thank you Mum, thank you Dad, thank you Mela.
+
+But whatever you discover, stays with you. To find a place and call it home is never easy. Whenever you leave a family, albeit temporarily, it is a struggle of glimpses and silences to find a new one. No one can live on his own, and Fortune sometimes has good calls. One of these calls was to find an incredible group of people, with hearts of builders and eyes of sailors to share this incredible passage of my life. Thanks then to AGG extended and its newer versions. Thanks to Fede, Tolly, Leo, Bengala, Vincent, Anto, Annarella.
+
+Brothers.
+
+
