--- a/Bibliography/References.bib
+++ b/Bibliography/References.bib
@@ -17,7 +17,7 @@
 
 @book{Ferlay2012,
   title={Cancer Incidence and Mortality Worldwide: IARC CancerBase No. 11},
-  author={Ferlay, Soerjomataram et al.},
+  author={Ferlay et al.},
   journal={GLOBOCAN 2012 v1.0},
   year={2012},
   publisher={International Agency for Research on Cancer}
@@ -25,7 +25,7 @@
 
 @article{Durante2010,
   title={Charged particles in radiation oncology},
-  author={Durante, Loeffler},
+  author={Durante et al.},
   journal={Nature Reviews Clinical Oncology},
   number={7},
   pages={37--43},
@@ -35,7 +35,7 @@
 
 @article{Enghardt2004,
   title={Charged hadron tumour therapy monitoring by means of PET},
-  author={Enghardt, Crespo et al.},
+  author={Enghardt et al.},
   journal={Nuclear Instruments & Methods in Physics Research A},
   number={525},
   pages={284--288},
@@ -55,7 +55,7 @@
 
 @article{Crespo2007,
   title={Direct time-of-flight for quantitative, real-time in-beam PET: a concept and feasibility study},
-  author={Crespo, Shakirin et al.},
+  author={Crespo et al.},
   journal={Physics in Medicine and Biology},
   number={52},
   pages={6795--6811},
@@ -65,7 +65,7 @@
 
 @article{Amaldi2011,
   title={Present challenges in hadrontherapy techniques},
-  author={Amaldi, Braccini},
+  author={Amaldi et al.},
   journal={The European Physical Journal Plus},
   number={126},
   pages={70--85},
@@ -75,7 +75,7 @@
 
 @article{Fiedler2006,
   title={The Feasibility of In-Beam PET for Therapeutic Beams of He},
-  author={Fiedler, Crespo et al.},
+  author={Fiedler et al.},
   journal={IEEE Transactions in Nuclear Science},
   number={4},
   volume={53},
@@ -98,7 +98,7 @@
 
 @book{Lecoq2006,
   title={Inorganic Scintillators for Detector Systems},
-  author={Lecoq, Annenkov et al.},
+  author={Lecoq  et al.},
   year={2006},
   publisher={Springer}
 }
@@ -112,21 +112,21 @@
 
 @book{xdata2009,
   title={X-Ray Data Booklet},
-  author={Thompson, Attwood et al.},
+  author={Thompson et al.},
   year={2009},
   publisher={Lawrence Berkeley National Laboratory, University of California}
 }
 
 @article{nist2005,
   title={Stopping-Power and Range Tables for Electrons, Protons, and Helium Ions},
-  author={Berger, Coursey et al.},
+  author={Berger et al.},
   year={2005},
   publisher={NIST, Physical Measurement Laboratory}
 }
 
 @article{jellison2012,
   title={Spectroscopic Refractive Indices of Monoclinic Single Crystal and Ceramic Lutetium Oxyorthosilicate from 200 to 850 nm},
-  author={Jellison, Specht et al.},
+  author={Jellison et al.},
   journal={Journal of Applied Physics},
   year={2012},
   volume={112},
@@ -135,13 +135,21 @@
 
 @article{Karp2008,
   title={The benefit of time-of-flight in PET imaging: Experimental and clinical results},
-  author={Karp, Surti et al.},
+  author={Karp et al.},
   journal={Journal of Nuclear Medicine},
   volume={49},
   pages={462-470},
   year={2008},
   publisher={Society of Nuclear Medicine and Molecular Imaging}
   }
+  
+  @PhdThesis{Ferrere1993,
+  title={Etude de Nouveaux Cristaux Scintillants pour la Calorimetrie aux Futurs Collisionneurs de Hautes Energies},
+  author={Ferrere},
+  school={University of Annecy},
+  month={June},
+  year={1993}
+}
   
 % capitolo 3
 
@@ -187,14 +195,14 @@
   
 @article{Schardt2007,
   title={Precision Bragg-Curve Measurements for Light-Ion Beams in Water},
-  author={Schardt, Steidl et al.},
+  author={Schardt et al.},
   journal={GSI Scientific Report},
   year={2007},
   }
 
 @article{Dolgoshein2003,
   title={Silicon photomultiplier and its possible applications},
-  author={Dolgoshein, Filatov et al.},
+  author={Dolgoshein et al.},
   journal={Nuclear Instruments and Methods in Physics Research A},
   volume={504},
   pages={48-52},
@@ -237,7 +245,7 @@ positron emission tomography},
 
 @article{Anghinolfi2004,
   title={NINO: An Ultrafast Low-Power Front-End Amplifier Discriminator for the Time-of-Flight Detector in the ALICE Experiment},
-  author={Anghinolfi, Jarron et al.},
+  author={Anghinolfi et al.},
   journal={IEEE Transactions on Nuclear Science},
   volume={51},  
   number={5},
@@ -258,16 +266,26 @@ positron emission tomography},
 
 @article{Vasiliev2013,
   title={Multiscale Approach to Estimation of Scintillation Characteristics},
-  author={Vasiliev, Getkin},
+  author={Vasiliev et al.},
   journal={IEE Transaction on Nuclear Science},
   number={Accepted},
   year={2014},
   publisher={IEEE}
 }
 
+@article{Lecoq2014,
+  title={Can Transient Phenomena Help Improving Time
+Resolution in Scintillators?},
+  author={Lecoq et al.},
+  journal={IEEE Transaction on Nuclear Science},
+  number={61},
+  year={2014},
+  publisher={IEEE}
+}
+
 @article{Seifert2012,
   title={The Lower Bound on the Timing Resolution of Scintillation Detectors},
-  author={Seifert, Schaart, van Dam},
+  author={Seifert et al.},
   journal={Physics in Medicine and Biology},  
   number={57},
   pages={1797-1814},
@@ -287,7 +305,7 @@ positron emission tomography},
 
 @article{Hyman1963,
   title={Study of High Speed Photomultiplier Systems},
-  author={Hyman, Schwarcz, Schluter},
+  author={Hyman et al.},
   journal={The Review of Physical Instruments},
   volume={35},  
   number={3},
@@ -295,6 +313,24 @@ positron emission tomography},
   year={1963}
 }
 
+
+@misc{ROOT,
+  title = {ROOT, a data analysis framework},
+  howpublished = {\url{http://root.cern.ch/drupal/}},
+  note = {Accessed: 2014-10-11}
+}
+
+@misc{CCC,
+  title = {The crystal clear collaboration},
+  howpublished = {\url{http://crystalclear.web.cern.ch/crystalclear/}},
+  note = {Accessed: 2014-10-11}
+}
+
+@misc{LaserLab,
+  title = {Laserlab Europe},
+  howpublished = {\url{http://www.laserlab-europe.net}},
+  note = {Accessed: 2014-10-11}
+}
 % capitolo 5
 %@website{ROOT,
 %http://root.cern.ch/drupal/
@@ -302,7 +338,7 @@ positron emission tomography},
 
 @article{Pizzi2012,
   title={Ray Tracing Simulations in Scintillators: a Comparison between SLitrani and Geant4},
-  author={Pizzichemi, Di Vara et al.},
+  author={Pizzichemi et al.},
   journal={2012 IEEE Nuclear Science Symposiwn and Medical Imaging Conference Record (NSS/MIC)},
   year={2012},
   publisher={IEEE}
@@ -397,7 +433,7 @@ positron emission tomography},
 
 @article{Derenzo2000,
   title={Measurements of the Intrinsic Rise Times of Common Inorganic Scintillators},
-  author={Derenzo, Weber et al.},
+  author={Derenzo et al.},
   journal={IEEE Transactions on Nuclear Science},
   year={2000},
   publisher={IEEE}
@@ -406,7 +442,7 @@ positron emission tomography},
 
 @article{Bajzer1991,
   title={Maximum likelihood method for the analysis of time-resolved fluorescence decay curves},
-  author={Bajzer, Therneau et al.},
+  author={Bajzer et al.},
   journal={European Biophysics Journal},
   volume = {20},  
   number={5},
@@ -417,7 +453,7 @@ positron emission tomography},
 
 @article{Kawamura1996,
   title={Spectroscopic Measurements of Optical Elements for Submillimeter Receivers},
-  author={Kawamura, al.},
+  author={Kawamura et al.},
   journal={Seventh International Symposium on Space Terahertz Technology 1996 Proceeding},
   pages={349--356},
   year={1996},
@@ -443,7 +479,7 @@ positron emission tomography},
 
 @article{Martin2001,
   title={Time-Resolved Studies of Scintillation Materials with VUV Harmonic Ultrashort Pulses Laser Source},
-  author={Martin, Belsky et al.},
+  author={Martin et al.},
   journal={IEEE Transactions on Nuclear Science},
   volume={48},  
   number={4},
@@ -467,6 +503,12 @@ positron emission tomography},
   year={2004}
 }
 
+@inproceedings{Gundi,
+    author  = {Gundacker et al.},
+    title   = {Measurement of the scintillation rise time for different LSO type crystals and its influence on the CTR},
+    publisher = "Presented as the 2014 IEEE Conferene, Seattle, USA",
+    year    = 2014
+}
 
 % capitolo 8
 
